# uriel-numeric

./: .gitignore  Makefile  README.md  clean_project.sh  recompile_project.sh  uriel.sln
.github/workflows/: build.yml
cardiac-cell-solver/: CMakeLists.txt  Makefile  OptionParser.cpp  OptionParser.h  argvparser.cpp  argvparser.h  cardiac-cell-solver.cpp  cardiac-cell-solver.vcxproj  cardiac-cell-solver.vcxproj.filters  run-example.txt
cardiac-monodomain-fd-solver/: CMakeLists.txt  Makefile  cardiac-monodomain-fd-solver.cpp  cardiac-monodomain-fd-solver.vcxproj  cardiac-monodomain-fd-solver.vcxproj.filters  run-example.txt
uriel-core/: uriel-core.cpp  uriel-core.vcxproj  uriel-core.vcxproj.filters
uriel-numeric/: CMakeLists.txt  Makefile  uriel-numeric.vcxproj  uriel-numeric.vcxproj.filters
uriel-numeric/include/: pch.h  urielenv.h
uriel-numeric/include/method/ode/: ForwardEulerAdaptiveMethod.h  ForwardEulerMethod.h  ODEAdaptiveMethod.h  ODEMethod.h  RushLarsenAdaptiveMethod.h  RushLarsenMethod.h  UniformizationMethod.h
uriel-numeric/include/model/: CellModel.h  Model.h  ModelVariableDescription.h
uriel-numeric/include/model/electrophysiology/: Bondarenko2004.h  Bondarenko2004_defs.h  Fox2002.h  Fox2002_defs.h  Noble1962.h  Noble1962_defs.h  ToRORd.h  ToRORd_defs.h  ToRORd_fkatp_2019.h  ToRORd_fkatp_2019_defs.h  Tusscher2004.h  Tusscher2004_defs.h
uriel-numeric/include/modules/physiology/method/ode/: RushLarsenMethod.h
uriel-numeric/include/output/: DummyPrinter.h  SingleFilePrinter.h  SolutionPrinter.h
uriel-numeric/source/method/ode/: ForwardEulerAdaptiveMethod.cpp  ForwardEulerMethod.cpp  RushLarsenAdaptiveMethod.cpp  RushLarsenMethod.cpp  UniformizationMethod.cpp
uriel-numeric/source/model/: CellModel.cpp  Model.cpp
uriel-numeric/source/model/electrophysiology/: Bondarenko2004.cpp  Fox2002.cpp  Noble1962.cpp  ToRORd.cpp  ToRORd_fkatp_2019.cpp  Tusscher2004.cpp
uriel-numeric/source/output/: DummyPrinter.cpp  SingleFilePrinter.cpp
uriel-tools/: CMakeLists.txt  Makefile  uriel-tools.vcxproj  uriel-tools.vcxproj.filters
uriel-tools/include/: pch.h
uriel-tools/include/options/: IndexedValue.h  OptionParser.h
uriel-tools/source/options/: OptionParser.cpp  argvparser.cpp
